Base of all the sections

--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,31 @@
     <title>Alagoas Dev Day 2015</title>
     <meta name="description" content="Alagoas Dev Day">
     <meta name="viewport" content="width=device-width">
+
+    <!-- Social: Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@aldevday">
+    <meta name="twitter:creator" content="aldevday">
+    <meta name="twitter:title" content="Home">
+    <meta name="twitter:description" content="Alagoas Dev Day 2015">
+    <meta name="twitter:image:src" content="">
+
+    <!-- Social: Facebook / Open Graph -->
+    <meta property="fb:admins" content="">
+    <meta property="fb:app_id" content="">
+    <meta property="og:url" content="http://alagoasdevday.com.br">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Alagoas Dev Day 2015">
+    <meta property="og:image" content=""/>
+    <meta property="og:description" content="">
+    <meta property="og:site_name" content="Alagoas Dev Day 2015">
+    <meta property="article:author" content="https://www.facebook.com/devdayalagoas">
+    <meta property="article:publisher" content="https://www.facebook.com/devdayalagoas">
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
-    <!-- <link rel="stylesheet" href="bower_components/pushy/css/pushy.css" /> -->
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -55,18 +75,97 @@
     <!-- Your Content -->
     <div id="container">
 
+      <section class="header-ovini">
+        <div class="cloud-wrapper"></div>
+        <div class="ovini-animation">
+          <div class="ovini">
+            <div class="light"></div>
+          </div>
+          <img src="images/add-logo.png" alt="" class="add-logo">
+          <div class="event-date-local">
+            <span class="date">18.Abril</span> <br>
+            Colégio Contato Maceió
+          </div>
+          <a href="#" class="register-header">
+            <img src="images/register-header.png" alt="">
+          </a>
+        </div>
+        <div class="rockets">
+          <img src="images/rockets.png" alt="">
+        </div>
+      </section>
 
-      <div class="tester">Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+      <section class="for-whom">
+        <div class="for-whon-wrapper">
+          <h2 class="section-title">Um Evento para Quem?</h2>
 
-      Você usa o Lorem Ipsum tradicional? Sabe de nada inocente!! Conheça meu lorem que é Tchan, Tchan, Tchannn!! Txu Txu Tu Paaaaa!! Vem, vem ordinária!! Venha provar do meu dendê que você não vai se arrepender. Só na sacanageeem!! Eu gostchu muitchu, heinn! Eitchaaa template cheio de abundância danadaaa!! Assim você mata o papai hein!? Etâaaa Mainhaaaaa...me abusa nesse seu layout, me gera, me geraaaa ordinária!!! Só na sacanagem!!!! Venha provar do meu dendê Tu du du pááá!.
+          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+        </div>
 
-      Mas que abundância meu irmãooo!!! Esse é seu Layout danadaaa!??? Sabe de nada inocente!! Vem, vem, vem ordinária, provar do meu dendê!! Eu gostxuu muitxuu desse seu Layout!! Etâ danadaaaa!! Tá tão lindo que vou falar em inglês só pra você mainhaaa!! Know nothing innocent. Ordinary!! Txhann Txhann, Txu txu tu paaa!! Damned. Only in Slutty!! Abundance that my borther!! Tchan, Tchan, Tchan...Tu tu tu pa!!!!.
+        <div class="cloud"></div>
+      </section>
 
-      Chama, Chama, Chama ordinária!!!! Tu du du pááá! rema, rema, ordinária! olha o quibe! eu gostchu muitchu, heinn! ordinária!! Domingo ela não vai. Tchannn!! Tchannn!! danadinha! Mainhaa! Eiiitaaa Mainhaaa!! Assim você mata o papai , viuu!! Danadaa!! Vem, vem ordinária!! Ahh mainhaa!! venha provar do meu dendê. Só na sacanageeem!! Sabe de nada inocente! que abundânciaaaa meu irmão!! Pau que nasce torto, Nunca se endireita....
+      <section class="speakers">
+        <div class="speakers-wrapper">
+          <h2 class="section-title">Palestrantes</h2>
 
-      Vem minha odalisca, agora faz essa cobra coral subir!!! que abundânciaaaa meu irmão!! Sabe de nada inocente! Só na sacanageeem!! venha provar do meu dendê. Ahh mainhaa!! Vem, vem ordinária!! Danadaa!! Assim você mata o papai , viuu!! Eiiitaaa Mainhaaa!! danadinha! Mainhaa! Tchannn!! Tchannn!! Domingo ela não vai. Sunday she won't go!! ordinária!! eu gostchu muitchu, heinn! olha o quibe! rema, rema, ordinária! Tu du du pááá!.
+          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+        </div>
 
-      Agora sim Mainhaaa!!! Me preencha nesse seu layout danadaaa!! Etâaaa mainhaaa!! danadaaa! Tu tu tu paa!!! Mas que abundância meu irmãooo!!! Esse é seu Layout danadaaa!??? Sabe de nada inocente!! Vem, vem, vem ordinária, provar do meu dendê!! Eu gostxuu muitxuu desse seu Layout!! Assim você mata o papai , viuu!! Eiiitaaa Mainhaaa!! danadinha! Mainhaa! Tchannn!! Tchannn!! Domingo ela não vai. Sunday she won't go!! ordinária!! .</div>
+      </section>
+
+      <section class="schedule">
+        <div class="schedule-wrapper">
+          <h2 class="section-title">Programação</h2>
+
+          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+        </div>
+        <div class="top-cloud"></div>
+        <div class="bottom-cloud"></div>
+      </section>
+
+      <section class="location">
+        <div class="location-wrapper">
+          <h2 class="section-title">Local</h2>
+
+          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+        </div>
+
+      </section>
+
+      <section class="workshop">
+        <div class="workshop-wrapper">
+          <h2 class="section-title">Workshop</h2>
+
+          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+        </div>
+      </section>
+
+      <section class="register">
+        <div class="register-wrapper">
+          <h2 class="section-title">Inscreva-se Já!</h2>
+
+          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+        </div>
+      </section>
+
+      <section class="sponsors">
+        <div class="sponsors-wrapper">
+          <h2 class="section-title">Quem faz acontecer</h2>
+
+          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+        </div>
+      </section>
+
+      <section class="organizers">
+        <div class="organizers-wrapper">
+          <h2 class="section-title">Organizadores</h2>
+
+          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+        </div>
+        <div class="top-cloud"></div>
+      </section>
+
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -102,6 +201,9 @@
     <script src="bower_components/hammerjs/hammer.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/pushy/js/pushy.js"></script>
+    <script src="bower_components/waypoints/lib/noframework.waypoints.min.js"></script>
+    <script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
+    <script src="bower_components/ScrollMagic/js/jquery.scrollmagic.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -109,5 +211,61 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <!-- endbuild -->
+
+
+    <script>
+      // controller = new ScrollMagic({
+      //       container: "#container",
+      //       globalSceneOptions: {
+      //         triggerHook: "onLeave"
+      //       }
+      //     });
+
+      var $ovini = $(".ovini");
+      var $light = $(".ovini .light");
+      var $addLogo = $(".add-logo");
+      var $eventDateLocal = $(".event-date-local");
+      var $rockets = $(".header-ovini .rockets");
+
+
+      var tl = new TimelineMax({delay:0.5, repeat:0, onComplete:oviniFloat});
+
+      var tlRocket = new TimelineMax({delay:0.5, repeat:0, onComplete:oviniFloat});
+
+      tlRocket.to($rockets, 2, {top: 200, right: 150,  ease: Power3.easeInOut}, "+=3.5");
+      tl.set($ovini, {top:-80, opacity:0.5});
+      tl.to($ovini, 1, {top: 130, opacity:1, ease: Power3.easeInOut});
+      tl.to($light, 1, {opacity: 1});
+      tl.to($addLogo, 1, {opacity: 1, top: 350, width: "182px", marginLeft: "-91px", ease: Power3.easeInOut});
+      tl.to($eventDateLocal, 1, {opacity: 1});
+
+
+
+
+      function  oviniFloat() {
+        var $ovini = $(".ovini");
+        var $registerHeader = $(".register-header");
+        var $light = $(".ovini .light");
+
+        var tlOvini = new TimelineMax({delay:0, repeat:500, repeatDelay:0});
+        var tlRegister = new TimelineMax({delay:0, repeat:500, repeatDelay:0});
+        var tlLight = new TimelineMax({delay:0, repeat:500, repeatDelay:0});
+        tlOvini.to($ovini, 1, {top: 125, ease: Power3.easeInOut});
+        tlOvini.to($ovini, 1, {top: 130, ease: Power3.easeInOut});
+
+        tlRegister.to($registerHeader, 0.5, {opacity: 1});
+        tlRegister.to($registerHeader, 0.5, {opacity: 0.8});
+
+        tlLight.to($light, 2.5, {opacity: 0.8});
+        tlLight.to($light, 2.5, {opacity: 1});
+
+
+
+      }
+
+
+    </script>
+
+
 </body>
 </html>
