For Who section, Speakers section (90%)

--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,43 @@
         <div class="for-whon-wrapper">
           <h2 class="section-title">Um Evento para Quem?</h2>
 
-          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+          <ul class="for-whom-list">
+            <li>
+              <span class="persona">Front-end</span>
+              <img src="images/persona-frontend.png" alt="">
+              <p class="description">
+                Padronização, web components, ferramentas e código, muito código.
+              </p>
+            </li>
+            <li>
+              <span class="persona">Back-end</span>
+              <img src="images/persona-backend.png" alt="">
+              <p class="description">
+                Padronização, web components, ferramentas e código, muito código.
+              </p>
+            </li>
+            <li>
+              <span class="persona">Designers</span>
+              <img src="images/persona-designer.png" alt="">
+              <p class="description">
+                Padronização, web components, ferramentas e código, muito código.
+              </p>
+            </li>
+            <li>
+              <span class="persona">Empresários</span>
+              <img src="images/persona-businessman.png" alt="">
+              <p class="description">
+                Padronização, web components, ferramentas e código, muito código.
+              </p>
+            </li>
+            <li>
+              <span class="persona">Criativos</span>
+              <img src="images/persona-creative.png" alt="">
+              <p class="description">
+                Padronização, web components, ferramentas e código, muito código.
+              </p>
+            </li>
+          </ul>
         </div>
 
         <div class="cloud"></div>
@@ -109,7 +145,59 @@
         <div class="speakers-wrapper">
           <h2 class="section-title">Palestrantes</h2>
 
-          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+          <ul class="speaker-list">
+            <li class="speaker-item">
+              <div class="speaker-profile-picture">
+                <div class="hover-profile-picture" style="background: rgba(26, 188, 156, 0.5) url('images/trash/globo.png') center no-repeat;">
+                </div>
+                <img src="images/trash/elton.jpg" alt="">
+              </div>
+              <div class="speaker-profile-informations">
+                <span class="speaker-name">Fabrício Teixeira</span>
+                <span class="speaker-job">UX na R/GA - New York</span>
+                <span class="speaker-description">
+                  Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                </span>
+                <ul class="social-links">
+                  <li><a href="#">tw</a></li>
+                </ul>
+              </div>
+            </li>
+            <li class="speaker-item">
+              <div class="speaker-profile-picture">
+                <div class="hover-profile-picture" style="background: rgba(26, 188, 156, 0.5) url('images/trash/globo.png') center no-repeat;">
+                </div>
+                <img src="images/trash/elton.jpg" alt="">
+              </div>
+              <div class="speaker-profile-informations">
+                <span class="speaker-name">Fabrício Teixeira</span>
+                <span class="speaker-job">UX na R/GA - New York</span>
+                <span class="speaker-description">
+                  Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                </span>
+                <ul class="social-links">
+                  <li><a href="#">tw</a></li>
+                </ul>
+              </div>
+            </li>
+            <li class="speaker-item">
+              <div class="speaker-profile-picture">
+                <div class="hover-profile-picture" style="background: rgba(26, 188, 156, 0.5) url('images/trash/globo.png') center no-repeat;">
+                </div>
+                <img src="images/trash/elton.jpg" alt="">
+              </div>
+              <div class="speaker-profile-informations">
+                <span class="speaker-name">Fabrício Teixeira</span>
+                <span class="speaker-job">UX na R/GA - New York</span>
+                <span class="speaker-description">
+                  Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
+                </span>
+                <ul class="social-links">
+                  <li><a href="#">tw</a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
         </div>
 
       </section>
