Speakers social links

--- a/app/index.html
+++ b/app/index.html
@@ -159,7 +159,18 @@
                   Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
                 </span>
                 <ul class="social-links">
-                  <li><a href="#">tw</a></li>
+                  <li class="twitter">
+                    <a href="#">Twitter</a>
+                  </li>
+                  <li class="facebook">
+                    <a href="#">Facebook</a>
+                  </li>
+                  <li class="linkedin">
+                    <a href="#">LinkedIn</a>
+                  </li>
+                  <li class="keynote">
+                    <a href="#">Keynote</a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -176,7 +187,18 @@
                   Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
                 </span>
                 <ul class="social-links">
-                  <li><a href="#">tw</a></li>
+                  <li class="twitter">
+                    <a href="#">Twitter</a>
+                  </li>
+                  <li class="facebook">
+                    <a href="#">Facebook</a>
+                  </li>
+                  <li class="linkedin">
+                    <a href="#">LinkedIn</a>
+                  </li>
+                  <li class="keynote">
+                    <a href="#">Keynote</a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -193,7 +215,18 @@
                   Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai.
                 </span>
                 <ul class="social-links">
-                  <li><a href="#">tw</a></li>
+                  <li class="twitter">
+                    <a href="#">Twitter</a>
+                  </li>
+                  <li class="facebook">
+                    <a href="#">Facebook</a>
+                  </li>
+                  <li class="linkedin">
+                    <a href="#">LinkedIn</a>
+                  </li>
+                  <li class="keynote">
+                    <a href="#">Keynote</a>
+                  </li>
                 </ul>
               </div>
             </li>
