Base of location

--- a/app/index.html
+++ b/app/index.html
@@ -249,7 +249,16 @@
         <div class="location-wrapper">
           <h2 class="section-title">Local</h2>
 
-          Eiiitaaa Mainhaaa!! Esse Lorem ipsum é só na sacanageeem!! E que abundância meu irmão viuu!! Assim você vai matar o papai. Só digo uma coisa, Domingo ela não vai! Danadaa!! Vem minha odalisca, agora faz essa cobra coral subir!!! Pau que nasce torto, Nunca se endireita. Tchannn!! Tchannn!! Tu du du pááá! Eu gostchu muitchu, heinn! danadinha! Mainhaa! Agora use meu lorem ipsum ordinária!!! Olha o quibeee! rema, rema, ordinária!.
+          <div class="location-box">
+            <div class="contact-info">
+              <div class="contact-box">
+                <img src="images/contato-logo.png" alt="">
+              </div>
+            </div>
+            <div class="map">
+              <iframe width="100%" height="660px" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Contato%20Macei%C3%B3&key=AIzaSyCf-MPZCV7b8OhBPMiV0GwnW15w2lMzw0Q"></iframe>
+            </div>
+          </div>
         </div>
 
       </section>
